Fix height on mobile viewport

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
-  /* min-height: 100vh; */
+  min-height: 100vh;
   /* mobile viewport bug fix */
-  /* min-height: -webkit-fill-available; */
+  min-height: -webkit-fill-available;
   height: 100%;
 }
 
